--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ attrs==21.4.0
 beautifulsoup4==4.11.1
 Brotli==1.0.9
 certifi==2019.3.9
+channels==3.0.5
 chardet==3.0.4
 charset-normalizer==2.1.0
 colorama==0.4.5
